@@ -33,8 +33,11 @@ dependencies {
     compileOnly(xpackModule("core"))
     compileOnly(xpackModule("blob-cache"))
     compileOnly(project(":libs:serverless-shared-constants"))
+    implementation(project(":libs:serverless-stateless-api"))
     internalClusterTestImplementation(testArtifact(xpackModule("core")))
+    internalClusterTestImplementation(xpackModule("logsdb"))
     internalClusterTestImplementation(xpackModule("shutdown"))
+    internalClusterTestImplementation(project(":modules:serverless-autoscaling"))
     internalClusterTestImplementation("org.elasticsearch.plugin:data-streams")
     testImplementation(project(":libs:serverless-shared-constants"))
     testImplementation(testArtifact(xpackModule("searchable-snapshots")))
@@ -51,7 +54,7 @@ dependencies {
 
 restResources {
     restApi {
-        include("_common", "indices", "index")
+        include("_common", "cluster", "indices", "index")
     }
 }
 
@@ -70,22 +73,6 @@ tasks {
         // warnings about failing to change access for FileDescriptor.fd
         // that org.elasticsearch.preallocate does
         jvmArgs("--add-opens=java.base/java.io=ALL-UNNAMED")
-    }
-
-    /**
-     * Same as internalClusterTest but without delayed upload enabled
-     * TODO: ES-8317 Remove it by merging into internalClusterTest once BCC changes are deployed to production
-     */
-    val internalClusterTestWitoutRco = register<Test>("internalClusterTestWitoutRco") {
-        val sourceSet = sourceSets.getByName(InternalClusterTestPlugin.SOURCE_SET_NAME)
-        setTestClassesDirs(sourceSet.getOutput().getClassesDirs())
-        setClasspath(sourceSet.getRuntimeClasspath())
-        jvmArgs("-XX:+UseG1GC", "--add-opens=java.base/java.io=ALL-UNNAMED")
-        systemProperty("es.test.stateless.upload.delayed", "false")
-    }
-
-    check {
-        dependsOn(internalClusterTestWitoutRco)
     }
 
     yamlRestTest {
